minor fixes on mobile
fixing header and wrapper

--- a/styles.less
+++ b/styles.less
@@ -44,8 +44,9 @@ header{
 			text-align: center;
 			padding: 0;
 			li{
-				display: inline;
-				margin-right: 30px;
+			display: inline;
+    	margin-right: 10px;
+    	margin-left: 10px;
 				@media only screen and (min-width: 900px) {
 					margin-right: 30px;
 			}
@@ -67,7 +68,7 @@ header{
 
 
 section#intro{
-	margin-top: 100px;
+	margin-top: 60px;
 	@media only screen and (min-width: 900px) {
 				margin-top: 100px;
 				margin-bottom: 100px;
@@ -75,11 +76,10 @@ section#intro{
 	.about-me{
 		color:@title;
 		clear: both;
-		font-size: 40px;
+		font-size: 36px;
 		margin: 0 auto;
-		margin-bottom: 100px;
 		text-align: center;
-		width: 100%;
+		width: 90%;
 		@media only screen and (min-width: 900px) {
 			font-size: 60px;
 			width: 60%;
@@ -102,7 +102,7 @@ section#picture{
 		height: 600px;
 		background: url("images/background.png") no-repeat;
 		background-size: cover;
-		background-position-x: -400px;
+		background-position-x: -435px;
 		@media only screen and (min-width: 500px) {
 			height: 600px;
 			background-position-x:-200px;
@@ -125,9 +125,10 @@ section#picture{
 .wrapper{
 	width: 80%;
 	margin: 0 auto;
-	margin-bottom: 100px;
+	margin-bottom: 50px;
 	@media only screen and (min-width: 900px) {
 		width: 60%;
+		margin-bottom: 100px;
 	}
 }
 
